# rust_mongodb_test

./: .env  .gitignore  Cargo.toml  README.md  data.db  test_http.sh
.cargo/: config.toml
json_storage/: data.db  database.py  main.py  test.py  test_main.py
src/: database.rs  handlers.rs  main.rs  main.rs1  main.rs2  main_OK.rs  main_sqlite_OK1.rs  main_sqlite_OK2.rs  models.rs
src/lib/: Cargo.toml
