[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "lib.rs"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
